--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,10 @@
 			<plugin>
 				<groupId>com.heroku.sdk</groupId>
 				<artifactId>heroku-maven-plugin</artifactId>
-				<version>2.0.8</version>
+				<version>3.0.4</version>
+				<configuration>
+					<appName>${heroku.appName}</appName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
