--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/expat?allowPublicKeyRetrieval=
 spring.datasource.username=matheus
 spring.datasource.password=_#Matheus
 
+server.port=8081
+
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
