--- a/src/main/resources/application-her.properties
+++ b/src/main/resources/application-her.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_2b1c3015eb932d2?reconnect=true
-spring.datasource.username=bc32004ec70951
-spring.datasource.password=010cb141
+spring.datasource.url=jdbc:mysql://localhost:3306/expat?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=matheus
+spring.datasource.password=_#Matheus
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
