--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.profiles.active=her
+spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_2b1c3015eb932d2?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=bc32004ec70951
+spring.datasource.password=010cb141
+
+// spring.profiles.active=her
 
 jwt.secret=dfhdsf2483@@@#12dk
 jwt.expiration=300000
