--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_2b1c3015eb932d2?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=bc32004ec70951
-spring.datasource.password=010cb141
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
 // spring.profiles.active=her
 
