--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-
-
+spring.profiles.active=prod
 
 jwt.secret=dfhdsf2483@@@#12dk
 jwt.expiration=300000
