--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/expat?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=matheus
-spring.datasource.password=_#Matheus
+spring.datasource.username=
+spring.datasource.password=
 
 server.port=8081
 
